fix: flex width when wrapped

--- a/layout.css
+++ b/layout.css
@@ -24,7 +24,7 @@ body,
 .split-editor,
 #preview-output-text,
 #log {
-    flex: 1 1 auto;
+    flex: 10 10 auto;
 }
 
 .split-editor {
@@ -39,7 +39,7 @@ body,
 }
 
 #preview-output {
-    flex: 0.5 1 auto;
+    flex: 5 10 auto;
     flex-direction: column;
     padding: 10px;
 }
@@ -49,7 +49,7 @@ body,
     margin-bottom: 10px;
 }
 .log-area {
-    flex: 0.1 1 auto;
+    flex: 1 10 auto;
     flex-direction: column;
 }
 .log-area h2 {
